--- a/static/css/style.css
+++ b/static/css/style.css
@@ -185,9 +185,6 @@ inc_top.mako
 }
 
 #content {
-    width: 95%;
-    min-width: 875px;
-    padding: 15px;
     margin-left: auto;
     margin-right: auto;
     clear: both;
@@ -196,7 +193,6 @@ inc_top.mako
 #SubMenu {
     font-size: 12px;
     float: right;
-    max-width: 1024px;
 }
 
 .upgrade-notification {
@@ -519,8 +515,11 @@ home.mako
     background-image: -o-linear-gradient(rgb(218, 89, 69), rgb(177, 26, 16)) !important;
 }
 
-span.show-option {
-    white-space: nowrap;
+
+/* Show options */
+
+.show-option {
+	float: left;
     margin-left: 10px;
     line-height: 40px;
 }
@@ -987,15 +986,135 @@ displayShow.mako
     overflow-y: auto;
 }
 
-#posterCol {
+.show-poster-container {
     float: left;
     margin-right: 10px;
-    margin-bottom: 20px;
 }
 
-#showCol {
-    overflow: hidden;
-    margin-bottom: 20px;
+#show-specials-and-seasons {
+    margin-bottom: 15px;
+}
+
+.show-info-container {
+    overflow:hidden;
+}
+
+.tvshowImg {
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 5px;
+    height: 311px;
+    width: auto;
+    float: left;
+}
+@media (max-width: 767px) {
+    .pull-xs-left {
+        float: left;
+    }
+
+    .pull-xs-right {
+        float: right;
+    }
+
+    .no-padding-xs {
+        padding: 0;
+    }
+
+    .nocheck {
+        padding-left: 0 !important;
+    }
+
+    .tvshowImg {
+        margin-bottom: 10px;
+    }
+
+    .show-poster-container {
+        display: inline-block;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .show-poster-container img {
+        display: block;
+        margin: 0 auto;
+    }
+    
+    .tvshowImg {
+        float: none;
+    }
+
+    .col-md-12 > .horizontal-scroll {
+        margin: 0 -13px;
+    }
+
+    .select-show-group {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .show-info-container {
+    display: block;
+    width: 100%;
+}
+
+
+}
+
+@media (min-width: 768px) {
+    .display-specials, .display-seasons {
+        top: -60px;
+    }
+
+    #show-specials-and-seasons {
+        bottom: 5px;
+        right: 15px;
+        position: absolute;
+    }
+
+    .tvshowImg {
+        max-height: 245px;
+    }
+
+}
+
+@media (max-width: 991px) and (min-width: 768px) {
+    .show-poster-container {
+        float: left;
+        display: inline-block;
+        width: 100%;
+    }
+
+    .show-info-container {
+        display: block;
+        width: 100%;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .pull-md-left {
+        float: left;
+    }
+
+    .pull-md-right {
+        float: right;
+    }
+
+    .tvshowImg {
+        max-height: 269px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .pull-lg-left {
+        float: left;
+    }
+
+    .pull-lg-right {
+        float: right;
+    }
+
+    .tvshowImg {
+        max-height: 269px;
+    }
 }
 
 .navShow {
@@ -1027,7 +1146,6 @@ h1.title a {
 
 .displayspecials {
     position: relative;
-    top: -24px;
 }
 
 #showinfo {
@@ -1068,7 +1186,7 @@ span.imdbstars > * {
 ul.tags {
     list-style-type: none;
     position: relative;
-    top: -5px;
+    top: 4px;
     margin-left: -40px;
 }
 
@@ -1089,26 +1207,19 @@ ul.tags li a {
     color: rgb(255, 255, 255);
 }
 
-.tvshowImg {
-    border: 1px solid rgb(204, 204, 204);
-    border-radius: 5px;
-    height: 311px;
-    width: auto;
-    float: left;
-}
-
 #summary {
+    margin-top: 5px;
+    margin-bottom: 5px;
     padding: 10px;
-    background-color: rgb(239, 239, 239);
-    border: 1px solid rgb(223, 222, 222);
+    background-color: #EFEFEF;
+    border: 1px solid #DFDEDE;
     width: 100%;
-    height: 250px;
     overflow: auto;
     cursor: default;
+    opacity: 0.8;
 }
 
 .summaryTable {
-    max-width: 70%;
     overflow: hidden;
 }
 
@@ -1459,6 +1570,11 @@ div.season-scene-exception {
 .showOptions {
     width: 180px;
     float: right;
+}
+
+select#select-show {
+    display: inline-block;
+    width: calc(100% - 40px);
 }
 
 /* =======================================================================
@@ -2248,8 +2364,9 @@ span.path {
 }
 
 .h2footer {
-    margin: -45px 0 8px;
+    /*margin: -45px 0 8px;*/
     line-height: 18px;
+    clear: both;
 }
 
 span.quality {
@@ -2472,11 +2589,6 @@ select,
 .uneditable-input {
     width: auto;
     color: rgb(0, 0, 0);
-}
-
-.container-fluid {
-    margin-left: 10px;
-    margin-right: 10px;
 }
 
 .navbar-brand {
@@ -3792,7 +3904,13 @@ css helper classes
   }
 }
 
+#SubMenu > a {
+	float: right;
+	margin-left: 4px;
+}
+
 @media screen and (min-width: 769px) {
   .full-width {display: block; }  /* show it on small screens */
   .mobile {display: none;}
 }
+
