--- a/static/css/style.css
+++ b/static/css/style.css
@@ -805,6 +805,12 @@ div.buttontext p {
     background-position: -150px 0;
 }
 
+ul.indexer-search-message {
+    font-weight: bold;
+    padding-left: 0px;
+    margin: 5px 0 5px 0;
+}
+
 /* =======================================================================
 home_newShow.mako
 ========================================================================== */
