Added tmdb icon
* Removed the a underline for the indexer origin url.
* Fixed the baseurl for tmdb.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1035,6 +1035,10 @@ h1.title a {
     top: -3px;
 }
 
+#showinfo a {
+    text-decoration: none;
+}
+
 span.imdbstars {
     display: inline-block;
     vertical-align: top;
