Fixed css typo.

--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -284,7 +284,7 @@ ul.tags li {
 .tvshowImg {
     border: 1px solid rgb(17, 17, 17);
     border-radius: 5px;
-ee}
+}
 
 #summary {
     background-color: rgb(61, 61, 61);
