Created a hack that you can use to display a row wider then the container. Not sure if i'm really fond of it. Also don't know if this works on all viewports.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1077,6 +1077,13 @@ displayShow.mako
 
 }
 
+@media (min-width: 992px) {
+    .row.wide {
+        margin-left: -12%;
+        margin-right: -12%;
+    }
+}
+
 @media (max-width: 991px) and (min-width: 768px) {
     .show-poster-container {
         float: left;
