Used flex-flow: column-reverse on mozilla browsers. I don't know why, but it works! At least it will show the poster. It will align to the top though. But that's a small sacrifice imo.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -558,6 +558,13 @@ home.mako
   align-items: center;
 }
 
+@-moz-document url-prefix() {
+    .aligner {
+        flex-flow: column-reverse;
+        align-items: inherit;
+    }
+}
+
 .show-details {
     height: 32px;
     overflow: hidden;
