--- a/static/css/style.css
+++ b/static/css/style.css
@@ -558,6 +558,15 @@ home.mako
   align-items: center;
 }
 
+/*IE10/11 hack*/
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    .aligner {
+        flex-flow: column-reverse;
+        align-items: inherit;
+    }
+}
+
+/*FF hack*/
 @-moz-document url-prefix() {
     .aligner {
         flex-flow: column-reverse;
@@ -3947,5 +3956,5 @@ css helper classes
 /* Christmas edition!!!*/
 .navbar-default {
     background-image: url('../images/medusa-christmas-banner.png')!important;
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(51, 51, 51)!important;
 }
