Temporary set a min-width on the ui-tabs-panel elements.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3959,3 +3959,8 @@ css helper classes
     background-image: url('../images/medusa-christmas-banner.png')!important;
     background-color: rgb(51, 51, 51)!important;
 }
+
+/* @FIXME: These fixed width are going to be removed with the all configuration pages are bootstrapped.*/
+.ui-tabs-panel {
+    min-width: 980px;
+}
